2001-02-11  alex  <alex@ximian.com>

	* TODO: add items left before a release.

	* soup-queue.c: change default Content-Type to "text/xml" from
	  "text/xml\r\n\tcharset=\"utf-8\"".

	* soup-serializer.[ch]: added soup_serializer_new_full which
	  removes unnecessary args to soup_serializer_start_envelope. 
	  rearrange namespace args to soup_serializer_start_element to match 
	  other methods. added soup_serializer_set_type to set the xsi:type,
	  and soup_serializer_set_null to set xsi:null="1".

2001-02-06  alex  <alex@ximian.com>

	* soup-config.in: remove some cruft.

	* soupConf.sh.in: remove some cruft.

	* src/soup-core/Makefile.am: build soup-headers.c

	* src/soup-core/soup-headers.[ch]: created. refactor of header parsing
	  logic for use in requests and responses.

	* src/soup-core/soup-message.c: free req->response_phrase as it is now 
	  allocated.

	* src/soup-core/soup-queue.c (soup_parse_headers): use 
	  soup_parse_response_headers. (soup_queue_reqest): free 
	  req->response_phrase.

	* src/soup-core/soup-serializer.h: include <time.h>

2001-01-31  Jeffrey Stedfast  <fejj@ximian.com>

	* src/soup-core/gionspr.c: Implemented (probably somewhat broken).

2001-01-25  Rodrigo Moya <rodrigo@ximian.com>

	* soup-config.in: replaced @glib_cflags@ and @glib_libs@ with
	@GLIB_CFLAGS@ and @GLIB_LIBS@. Added -I@includedir@/soup to
	$cflags

2001-01-23  alex  <alex@ximian.com>

	* ChangeLog: Created from rcs2log.

	* AUTHORS: Added Dick Porter.

	* soup.pc.in, soup-config.in, soupConf.sh, soup.m4:
	Created with a dash of Maintainer Love.

	* soup.spec.in: RPM spec file. Needs fixing wrt to displaying the
	OpenSSL license conditionally (if it was statically linked).

	* Makefile.am: Updated to install new config scripts and macros.

	* configure.in: add --enable-ssl, --with-ssl=[nss/openssl/none],
	and --with-nss-prefix=PFX to support choosing of an SSL library to
	use, even though openssl is the only one currently supported.
